--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.6.0"
+    "react-icons": "^4.6.0",
+    "simple-peer": "^9.11.1",
+    "socket.io-client": "^4.5.3"
   }
 }
